--- a/app/src/main/res/layout/tab_camera.xml
+++ b/app/src/main/res/layout/tab_camera.xml
@@ -2,6 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
-
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="fitXY"
+        android:src="@drawable/img3" />
 
 </LinearLayout>
