--- a/app/src/main/res/drawable/btn_filter_cover.xml
+++ b/app/src/main/res/drawable/btn_filter_cover.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector
   xmlns:android="http://schemas.android.com/apk/res/android">
+    <!--android:state_selected="false"-->
     <item
-        android:state_selected="false"
-        android:state_pressed="true"
-        android:drawable="@drawable/imagefactory_filter_item_pressed" />
 
-    <item
-        android:state_selected="true"
-        android:drawable="@drawable/imagefactory_filter_item_selected" />
+        android:state_pressed="true"
+        android:drawable="@drawable/imagefactory_filter_item_pressed"/>
+
+    <!--item
+        android:state_checked="true"
+        android:drawable="@drawable/imagefactory_filter_item_selected" /-->
 
     <item
         android:drawable="@drawable/imagefactory_filter_item_normal" />
