--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -154,6 +154,13 @@
             android:textAllCaps="false"/>
     </LinearLayout>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:id="@+id/debug_text"
+        android:text="Debug"/>
+
 
 
 </LinearLayout>
