--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -212,6 +212,29 @@
                     android:id="@+id/checkbox_female" />
             </LinearLayout>
         </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="8dp"
+            android:paddingBottom="2dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="10dp"
+            android:layout_marginBottom="0dp"
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/debug_signup"
+                android:layout_height="30dp"
+                android:layout_width="wrap_content"
+                android:textSize="16sp"
+                android:text="debug"
+                android:textColor= "@color/black">
+            </TextView>
+        </LinearLayout>
+
     </LinearLayout>
 
 </LinearLayout>
