--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -5,6 +5,7 @@
     <color name="blue">#ff3df0ff</color>
     <color name="blue_transparent_btn">#b33df0ff</color>
     <color name="transparent">#00000000</color>
+    <color name="signup_background_color">#eee</color>
 
 <color name="white">#ffffffff</color>
 <color name="accent">#ffffffff</color>
