--- a/app/src/main/res/layout/fragment_signup2.xml
+++ b/app/src/main/res/layout/fragment_signup2.xml
@@ -3,7 +3,8 @@
 
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/signup_background_color">
 
     <LinearLayout
         android:layout_width="fill_parent"
