--- a/app/src/main/res/layout/tab_user.xml
+++ b/app/src/main/res/layout/tab_user.xml
@@ -9,11 +9,12 @@
         android:id="@+id/layout_top"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_weight="9"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
-        android:paddingLeft="15dp"
-        android:paddingRight="15dp"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:layout_marginBottom="5dp"
         android:orientation="vertical"
         android:baselineAligned="true">
 
@@ -21,7 +22,7 @@
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="0dp"
-            android:layout_weight="2"
+            android:layout_weight="4"
             android:orientation="horizontal">
 
             <LinearLayout
@@ -35,15 +36,15 @@
                     android:layout_height="fill_parent"
                     android:scaleType="fitXY"
                     android:src="@drawable/img4"
-                    android:contentDescription="@string/filter_image_desc" />
+                    android:contentDescription="profile pic" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="fill_parent"
                 android:layout_weight="2"
-                android:paddingLeft="6dp"
-                android:paddingTop="10dp"
+                android:paddingLeft="10dp"
+                android:paddingTop="6dp"
                 android:orientation="vertical">
                 <LinearLayout
                     android:layout_width="fill_parent"
@@ -81,14 +82,14 @@
                     android:layout_width="fill_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:paddingTop="2dp"
-                    android:paddingRight="6dp"
-                    android:paddingBottom="2dp"
-                    android:clickable="true">
+                    android:paddingTop="4dp"
+                    android:paddingRight="2dp"
+                    android:paddingBottom="4dp">
                     <LinearLayout
                         android:layout_width="fill_parent"
                         android:layout_height="fill_parent"
-                        android:background="@color/yellow">
+                        android:background="@color/yellow"
+                        android:clickable="true">
                         <TextView
                             android:layout_height="fill_parent"
                             android:layout_width="fill_parent"
@@ -107,16 +108,16 @@
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
-            android:orientation="horizontal">
+            android:layout_weight="1">
+
             <TextView
                 android:layout_height="fill_parent"
                 android:layout_width="fill_parent"
                 android:textColor="@color/black"
-                android:layout_margin="10dp"
                 android:lines="1"
-                android:textSize="18sp"
-                android:text="@string/Xiangyi"
+                android:textSize="14sp"
+                android:text="Xiangyi Xie"
+                android:gravity="center_vertical"
                 android:clickable="false"/>
         </LinearLayout>
     </LinearLayout>
@@ -126,16 +127,25 @@
         android:id="@+id/layout_bottom"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="2"
+        android:layout_weight="19"
         android:orientation="vertical">
 
-        <View android:background="@color/light_notes_color"
+
+
+        <View android:background="@color/gray_line_color"
             android:layout_height="1dp"
             android:layout_width="fill_parent"/>
 
+
+
+
         <LinearLayout
+            android:id="@+id/user_info"
             android:layout_width="fill_parent"
-            android:layout_height="60dp"
+            android:layout_height="50dp"
+            android:paddingTop="8dp"
+            android:paddingBottom="2dp"
+            android:layout_marginBottom="6dp"
             android:orientation="horizontal">
 
             <LinearLayout
@@ -151,7 +161,7 @@
                         android:id="@+id/photos_number"
                         android:layout_height="fill_parent"
                         android:layout_width="fill_parent"
-                        android:textSize="16sp"
+                        android:textSize="14sp"
                         android:text="18"
                         android:gravity="center_horizontal|center_vertical"
                         android:textColor="@color/black"
@@ -161,24 +171,19 @@
                 <LinearLayout
                     android:layout_width="fill_parent"
                     android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:paddingTop="0dp"
+                    android:layout_weight="3"
+                    android:paddingTop="5dp"
                     android:orientation="horizontal">
                     <TextView
                         android:layout_height="fill_parent"
                         android:layout_width="fill_parent"
-                        android:textSize="10sp"
+                        android:textSize="12sp"
                         android:text="Photos"
                         android:gravity="center_horizontal|top"
                         android:layout_marginTop="0dp"
                         android:paddingTop="0dp"
                         android:clickable="false">
                     </TextView>
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/imageView" />
                 </LinearLayout>
             </LinearLayout>
 
@@ -195,7 +200,7 @@
                         android:id="@+id/following_number"
                         android:layout_height="fill_parent"
                         android:layout_width="fill_parent"
-                        android:textSize="16sp"
+                        android:textSize="14sp"
                         android:text="52"
                         android:gravity="center_horizontal|center_vertical"
                         android:textColor="@color/black"
@@ -205,12 +210,12 @@
                 <LinearLayout
                     android:layout_width="fill_parent"
                     android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:paddingTop="0dp">
+                    android:layout_weight="3"
+                    android:paddingTop="5dp">
                     <TextView
                         android:layout_height="fill_parent"
                         android:layout_width="fill_parent"
-                        android:textSize="10sp"
+                        android:textSize="12sp"
                         android:text="Following"
                         android:gravity="center_horizontal|top"
                         android:layout_marginTop="0dp"
@@ -233,7 +238,7 @@
                         android:id="@+id/followers_number"
                         android:layout_height="fill_parent"
                         android:layout_width="fill_parent"
-                        android:textSize="16sp"
+                        android:textSize="14sp"
                         android:text="36"
                         android:gravity="center_horizontal|center_vertical"
                         android:textColor="@color/black"
@@ -243,14 +248,15 @@
                 <LinearLayout
                     android:layout_width="fill_parent"
                     android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:paddingTop="0dp">
+                    android:layout_weight="3"
+                    android:paddingTop="5dp"
+                    android:orientation="vertical">
                     <TextView
                         android:layout_height="fill_parent"
                         android:layout_width="fill_parent"
-                        android:textSize="10sp"
+                        android:textSize="12sp"
                         android:text="Followers"
-                        android:gravity="center_horizontal|top"
+                        android:gravity="center_horizontal"
                         android:layout_marginTop="0dp"
                         android:paddingTop="0dp"
                         android:clickable="false">
@@ -261,19 +267,21 @@
         </LinearLayout>
 
 
-        <View android:background="@color/light_notes_color"
+        <View android:background="@color/gray_line_color"
             android:layout_height="1dp"
             android:layout_width="fill_parent"/>
+
+
 
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content">
+            <!--user grid photos-->
             <GridView
                 android:id="@+id/gridView_userphotos"
                 android:layout_width="fill_parent"
-                android:layout_height="200dp"
+                android:layout_height="wrap_content"
                 android:padding="0dp"
-                android:background="@color/transparent_background"
                 android:horizontalSpacing="2dp"
                 android:verticalSpacing="2dp"
                 android:numColumns="3"
