--- a/app/src/main/res/layout/tab_user_header.xml
+++ b/app/src/main/res/layout/tab_user_header.xml
@@ -3,15 +3,17 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="200dp">
+
+
 
     <LinearLayout
         android:id="@+id/layout_top"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="3"
+        android:layout_height="150dp"
+
         android:paddingTop="10dp"
-        android:paddingBottom="10dp"
+        android:paddingBottom="8dp"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
         android:layout_marginBottom="0dp"
@@ -39,7 +41,7 @@
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
+                android:layout_weight="2"
 
                 android:paddingLeft="10dp"
                 android:paddingTop="6dp"
@@ -111,7 +113,6 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:layout_width="match_parent"
-
             android:textColor="@color/black"
             android:lines="1"
             android:textSize="14sp"
@@ -121,24 +122,29 @@
             android:paddingLeft="3dp"
             android:layout_marginTop="3dp"/>
 
-
-
     </LinearLayout>
 
 
     <View android:background="@color/gray_line_color"
-        android:layout_height="1dp"
-        android:layout_width="fill_parent"/>
+          android:layout_height="1dp"
+          android:layout_width="fill_parent"/>
+
+
+
+
+
 
     <LinearLayout
-        android:id="@+id/user_info"
+        android:id="@+id/user_following_info"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:paddingTop="8dp"
-        android:paddingBottom="2dp"
-        android:layout_marginBottom="6dp"
-        android:orientation="horizontal">
+        android:layout_height="50dp"
+
+        android:paddingTop="4dp"
+        android:paddingBottom="6dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="14dp"
+        android:orientation="horizontal"
+        android:baselineAligned="false">
 
         <LinearLayout
             android:layout_width="0dp"
@@ -164,7 +170,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="0dp"
                 android:layout_weight="3"
-                android:paddingTop="5dp"
+                android:paddingTop="4dp"
                 android:orientation="horizontal">
                 <TextView
                     android:layout_height="fill_parent"
@@ -203,7 +209,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="0dp"
                 android:layout_weight="3"
-                android:paddingTop="5dp">
+                android:paddingTop="4dp">
                 <TextView
                     android:layout_height="fill_parent"
                     android:layout_width="fill_parent"
@@ -241,7 +247,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="0dp"
                 android:layout_weight="3"
-                android:paddingTop="5dp"
+                android:paddingTop="4dp"
                 android:orientation="vertical">
                 <TextView
                     android:layout_height="fill_parent"
@@ -255,14 +261,7 @@
                 </TextView>
             </LinearLayout>
         </LinearLayout>
-
     </LinearLayout>
-
-    <View android:background="@color/gray_line_color"
-        android:layout_height="1dp"
-        android:layout_width="fill_parent"/>
-
-
 
 
 </LinearLayout>
