--- a/app/src/main/res/layout/tab_user_new.xml
+++ b/app/src/main/res/layout/tab_user_new.xml
@@ -3,18 +3,21 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
     <com.android.photos.views.HeaderGridView
         android:id="@+id/gridView_userphotos"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:numColumns="3"
-        android:padding="0dp"
+        android:paddingTop="2dp"
         android:horizontalSpacing="2dp"
         android:verticalSpacing="2dp"
-
-        android:stretchMode="columnWidth"
-
-        >
+        android:stretchMode="columnWidth">
     </com.android.photos.views.HeaderGridView>
+
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </LinearLayout>
