--- a/app/src/main/res/layout/tab_user_new.xml
+++ b/app/src/main/res/layout/tab_user_new.xml
@@ -3,9 +3,14 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v4.widget.SwipeRefreshLayout
+    <com.xiangyixie.picshouse.view.SwipeRefreshChildFollowLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:id="@+id/tab_user_refresh">
+
+        <FrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
     <com.android.photos.views.HeaderGridView
         android:id="@+id/gridView_userphotos"
@@ -18,6 +23,8 @@
         android:stretchMode="columnWidth">
     </com.android.photos.views.HeaderGridView>
 
-    </android.support.v4.widget.SwipeRefreshLayout>
+        </FrameLayout>
+
+    </com.xiangyixie.picshouse.view.SwipeRefreshChildFollowLayout>
 
 </LinearLayout>
