build tab_house_listview_item.xml

--- a/app/src/main/res/layout/tab_house_listview_item.xml
+++ b/app/src/main/res/layout/tab_house_listview_item.xml
@@ -2,8 +2,24 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal">
+    android:orientation="vertical">
 
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="50dp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/user_image"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/img6"
+            android:background="@drawable/rounded_shape"
+            android:scaleType="centerCrop"
+            android:layout_gravity="center_vertical" />
+
+
+    </LinearLayout>
 
     <ImageView
         android:id="@+id/imageView1"
