--- a/app/src/main/res/layout/tab_house_listview_item.xml
+++ b/app/src/main/res/layout/tab_house_listview_item.xml
@@ -13,8 +13,8 @@
             android:id="@+id/user_image"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:src="@drawable/img6"
-            android:background="@drawable/rounded_shape"
+
+            android:src="@drawable/rounded_shape"
             android:scaleType="centerCrop"
             android:layout_gravity="center_vertical" />
 
