using RoundedBitmapDrawable and disable orientation.

--- a/app/src/main/res/drawable/rounded_shape.xml
+++ b/app/src/main/res/drawable/rounded_shape.xml
@@ -12,5 +12,6 @@
    	    android:topLeftRadius="35dp"
         android:topRightRadius="35dp"/>
    	<stroke
+        android:color="@color/black"
    	    />
 </shape>
