--- a/app/src/main/res/layout/tab_house_listview_item.xml
+++ b/app/src/main/res/layout/tab_house_listview_item.xml
@@ -6,16 +6,16 @@
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="50dp"
+        android:layout_height="80dp"
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/user_image"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:id="@+id/tab_house_user_image"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
 
-            android:src="@drawable/rounded_shape"
-            android:scaleType="centerCrop"
+            android:src="@drawable/img5"
+            android:scaleType="fitXY"
             android:layout_gravity="center_vertical" />
 
 
