--- a/app/src/main/res/layout/tab_house_listview_item.xml
+++ b/app/src/main/res/layout/tab_house_listview_item.xml
@@ -10,15 +10,11 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/tab_house_user_image"
+            android:id="@+id/user_image"
             android:layout_width="40dp"
             android:layout_height="40dp"
-
             android:src="@drawable/img5"
-
             android:layout_gravity="center_vertical" />
-
-
     </LinearLayout>
 
     <ImageView
