write 'house' tab xml list view file.

--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -7,6 +7,7 @@
     <color name="transparent">#00000000</color>
     <color name="signup_background_color">#eee</color>
     <color name="gray_line_color">#ffd9dcee</color>
+    <color name="dark_blue_like_text">#2c55b1</color>
 
 <color name="white">#ffffffff</color>
 <color name="accent">#ffffffff</color>
