--- a/app/src/main/res/layout/tab_house_listview_item.xml
+++ b/app/src/main/res/layout/tab_house_listview_item.xml
@@ -6,67 +6,88 @@
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="80dp"
+        android:layout_height="60dp"
         android:orientation="horizontal">
-
         <ImageView
             android:id="@+id/user_image"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:src="@drawable/img5"
+            android:layout_marginLeft="10dp"
             android:layout_gravity="center_vertical" />
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/imageView1"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:src="@drawable/img5"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="5dp" />
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="340dp"
+        android:orientation="vertical"
+        android:padding="0dp">
+        <ImageView
+            android:id="@+id/pic_image"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/img5"
+            android:layout_marginLeft="0dp"
+            android:layout_marginRight="0dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginBottom="0dp"
+            android:scaleType="fitXY"/>
+    </LinearLayout>
 
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_marginLeft="10dp"
-        android:gravity="left" >
-
-
+        android:layout_width="fill_parent"
+        android:layout_height="40dp"
+        android:orientation="horizontal"
+        android:gravity="center_vertical">
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/likes_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Header Text"
+            android:layout_marginLeft="10dp"
+            android:text="35426 likes"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="19sp"
-            android:textColor="#222222"
+            android:textSize="13sp"
+            android:textColor="@color/dark_blue_like_text"
             android:textStyle="bold" />
+    </LinearLayout>
 
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingLeft="10dp"
+        android:gravity="left">
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/comment1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Tweet body text here"
-            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="WOW, it's so awesome!"
+            android:textSize="13sp"
+            android:textColor="@color/black"/>
+
+        <TextView
+            android:id="@+id/comment2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="I like your concert and your songs very much. I have listened your songs for 10 years, starting from my 14 year old youth, to now. I listened every song of yours,actually whole of them just recorded the youth days of my generation. Love you and your spirit, it's so wonderful and have lived with me for 10 years."
             android:layout_marginTop="5dp"
             android:ellipsize="end"
             android:lines="3"
-            android:textColor="#666666"
-            android:textSize="14sp" />
-
+            android:textColor="@color/black"
+            android:textSize="13sp" />
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/commet3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="20 Nov 2013"
-            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="Like you!"
             android:layout_marginTop="5dp"
-            android:textColor="#999999"
-            android:textSize="12sp" />
+            android:textColor="@color/black"
+            android:textSize="13sp" />
 
     </LinearLayout>
 
