--- a/app/src/main/res/layout/tab_house_listview_item.xml
+++ b/app/src/main/res/layout/tab_house_listview_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/house_scrollview">
@@ -125,6 +125,7 @@
             android:textColor="@color/black"
             android:textSize="13sp" />
 
+
     </LinearLayout>
     </LinearLayout>
-</ScrollView>
+</android.support.v4.widget.NestedScrollView>
