--- a/app/src/main/res/layout/tab_house.xml
+++ b/app/src/main/res/layout/tab_house.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent" android:layout_height="match_parent">
 
     <ListView
-        android:id="@+id/house_listview"
+        android:id="@+id/tab_house_listview"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" >
     </ListView>
