--- a/app/src/main/res/layout/tab_house.xml
+++ b/app/src/main/res/layout/tab_house.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <com.xiangyixie.picshouse.view.pinnedHeaderListView.PinnedHeaderListView
         android:id="@+id/tab_house_listview"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent" >
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
     </com.xiangyixie.picshouse.view.pinnedHeaderListView.PinnedHeaderListView>
 
 </LinearLayout>
