--- a/app/src/main/res/layout/tab_house.xml
+++ b/app/src/main/res/layout/tab_house.xml
@@ -4,10 +4,17 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <!--android.support.v4.widget.NestedScrollView
+android:id="@+id/house_scrollview"
+android:layout_width="match_parent"
+android:layout_height="match_parent"-->
+
+
     <com.xiangyixie.picshouse.view.pinnedHeaderListView.PinnedHeaderListView
         android:id="@+id/tab_house_listview"
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
     </com.xiangyixie.picshouse.view.pinnedHeaderListView.PinnedHeaderListView>
+    <!--/android.support.v4.widget.NestedScrollView-->
 
 </LinearLayout>
